--- a/product-card/index.html
+++ b/product-card/index.html
@@ -14,6 +14,7 @@
     <div class="container-wrapper">
       <div class="container">
         <img class="card" src="images/image-product-desktop.jpg" alt="Card" />
+        <img class="mobile-card" src="images/image-product-mobile.jpg" alt="CardM">
         <div>
           <div>
             <p class="pr">PERFUME</p>
