add more styles in @media

--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -58,7 +58,7 @@
         <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
       </div>
     </div>
-    <div class="bottom-main-content-1">
+    <div id="bottom-main-content-1" class="bottom-main-content">
       <img class="picture-2 bottom-picture" src="assets/images/image-retro-pcs.jpg" alt="">
       <div class="footer-box">
       <p class="number">01</p>
@@ -66,7 +66,7 @@
       <p>What happens when old PCs are given modern upgrades?</p>
       </div>
     </div>
-    <div class="bottom-main-content-2">
+    <div id="bottom-main-content-2" class="bottom-main-content">
       <img class="picture-3 bottom-picture" src="assets/images/image-top-laptops.jpg" alt="">
       <div class="footer-box">
       <p class="number">02</p>
@@ -74,7 +74,7 @@
       <p>Our best picks for various needs and budgets.</p>
       </div>
     </div>
-    <div class="bottom-main-content-3">
+    <div id="bottom-main-content-3" class="bottom-main-content">
       <img class="picture-4 bottom-picture" src="assets/images/image-gaming-growth.jpg" alt="">
       <div class="footer-box">
       <p class="number">03</p>
