--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -100,7 +100,7 @@
 
 
 
-    <section class="lastsection">
+    <div class="lastsection">
 
 
       <div class="lastdiv">
@@ -129,9 +129,9 @@
 
         </div>
 
-    </section>
+        </section>
 
-  </div>
+      </div>
 
 </body>
 
