add desktop design

--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -27,19 +27,21 @@
     <header>
       <div class="page-icon">W.</div>
       <nav>
-        <i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i>
+        <div class="hamburger">
+          <i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i>
+        </div>
         <ul class="desktop-nav">
           <li>Home</li>
           <li>New</li>
           <li>Popular</li>
-          <li>rending</li>
+          <li>Trending</li>
           <li>Categories</li>
         </ul>
       </nav>
     </header>
     <main>
       <img class="image-mobile" src="assets/images/image-web-3-mobile.jpg">
-      <img class="image-desktop" src="assets/images/image-web-3-desktop">
+      <img class="image-desktop" src="assets/images/image-web-3-desktop.jpg">
       <h1 class="myheading">The Bright Future of Web 3.0?</h1>
 
       <p class="description">We dive into the next evolution of the web that claims to put the power of the platforms
