--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -6,7 +6,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
   </style>
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
   <link rel="stylesheet" href="style.css">
   <title>News homepage</title>
 </head>
