--- a/product-card/index.html
+++ b/product-card/index.html
@@ -1,27 +1,22 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Product preview card component</title>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="projekt22.css">
 </head>
 <body>
-
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
+    <div class="akapit1">
+    Reliable,efficent delivery</div>
+    <div class="akapit2"><h2>Powered by Technology</h2></div>
+    <div class="akapit3"><h2>Our Artificial Intelligence powered tools use millions of project data<p>points to ensure that your project is successful</p></h2></div>
+        <section >
+            <div class="supervisor"><div class="color1"></div><div class="tekst1"><h1>Supervisor</h1>Monitors activity, to identify project<p> roadblocks</p><div class="position1"><div class="icon"><img class="icon1" src="projekt2/icon-supervisor1.svg"></div></div></div></div>
+            <div class="srodek"><div class="team"><div class="color2"></div><div class="tekst2"><h1>Team Builder</h1>Scans our talent network to create the <p>optimal team for your project</p><div class="position2"><div class="icon2"><img src="projekt2/icon-team-builder.svg"></div></div></div></div>
+            <div class="Karma"><div class="color3"></div><div class="tekst3"><h1>Karma</h1>Regularly evaluates our talent to <p>ensure quality</p><div class="position3"><div class="icon3"><img src="projekt2/icon-karma.svg"></div></div></div></div></div>
+            <div class="Calculator"><div class="color4"></div><div class="tekst4"><h1>Calculator</h1>Uses data from past projects to <p>provide better delivery estimates</p><div class="position4"><div class="icon4"><img  src="projekt2/icon-calculator.svg"></div></div></div></div>
+        </section>
 </body>
 </html>
