--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -12,9 +12,8 @@
 		<script
 			src="https://kit.fontawesome.com/c1e3cd0742.js"
 			crossorigin="anonymous"></script>
-
+			<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./style.css" />
-
 		<title>News homepage</title>
 	</head>
 	<body>
@@ -38,17 +37,18 @@
 			<button>Read more</button></div>
 			<div class="new">
 				<p class="new-title">New</p>
-				<p class="new-first">New Hydrogen VS Electric Cars</p>
+				<p class="new-first">Hydrogen VS Electric Cars</p>
 				<p class="new-second">
 					Will hydrogen-fueled cars ever catch up to EVs?
 				</p>
+				
 				<p class="new-first">The Downsides of AI Artistry</p>
 				<p class="new-second">
 					What are the possible adverse effects of on-demand AI image
 					generation?
 				</p>
 				<p class="new-first">Is VC Funding Drying Up?</p>
-				<p class="new-second">
+				<p class="new-last">
 					Private funding by VC firms is down 50% YOY. We take a look at what
 					that means.
 				</p>
