Add nav display in @media

--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -20,7 +20,7 @@
 		<div class="container">
 			<nav>
 				<img src="./assets/images/logo.svg" alt="" class="w" />
-
+				<a href="">Home</a><a href="">New</a><a href="">Popular</a><a href="">Trending</a><a href="">Categories</a>
 				<div class="menu">
 					<i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i>
 				</div>
