Add photo for mobile version, project completed

--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -28,6 +28,7 @@
   <main>
     <div class="main-picture">
       <img class="picture-1 picture" src="assets/images/image-web-3-desktop.jpg" alt="">
+      <img class="picture-11 picture" src="assets/images/image-web-3-mobile.jpg" alt="">
     </div>
     <div class="main-content">
       <h1>The Bright Future of Web 3.0?</h1>
