--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 		<link
 			rel="icon"
 			type="image/png"
@@ -12,16 +11,21 @@
 		<script
 			src="https://kit.fontawesome.com/c1e3cd0742.js"
 			crossorigin="anonymous"></script>
-			<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap"
+			rel="stylesheet" />
 		<link rel="stylesheet" href="./style.css" />
 		<title>News homepage</title>
 	</head>
 	<body>
 		<div class="container">
 			<nav>
-				<img src="./assets/images/logo.svg" alt="" class="w" />
-				<a href="">Home</a><a href="">New</a><a href="">Popular</a><a href="">Trending</a><a href="">Categories</a>
-				<div class="menu">
+				<img src="./assets/images/logo.svg" alt="" class="w-letter" />
+				<a href="">Home</a><a href="">New</a><a href="">Popular</a
+				><a href="">Trending</a><a href="">Categories</a>
+				<div class="menu-bars">
 					<i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i>
 				</div>
 			</nav>
@@ -29,19 +33,20 @@
 			<div class="bright">
 				<p class="one">The Bright Future of Web 3.0?</p>
 			</div>
-			<div class="bright2"><p class="two">
-				We dive into the next evolution of the web that claims to put the
-				power of the platforms back into the hands of the people. But is it
-				really fulfilling its promise?
-			</p>
-			<button>Read more</button></div>
+			<div class="bright2">
+				<p class="two">
+					We dive into the next evolution of the web that claims to put the
+					power of the platforms back into the hands of the people. But is it
+					really fulfilling its promise?
+				</p>
+				<button>Read more</button>
+			</div>
 			<div class="new">
 				<p class="new-title">New</p>
 				<p class="new-first">Hydrogen VS Electric Cars</p>
 				<p class="new-second">
 					Will hydrogen-fueled cars ever catch up to EVs?
 				</p>
-				
 				<p class="new-first">The Downsides of AI Artistry</p>
 				<p class="new-second">
 					What are the possible adverse effects of on-demand AI image
@@ -55,7 +60,7 @@
 			</div>
 			<div class="box">
 				<div class="img image-pc">
-					<img src="./assets/images/image-retro-pcs.jpg" alt="">
+					<img src="./assets/images/image-retro-pcs.jpg" alt="" />
 				</div>
 				<div class="text">
 					<p class="number">01</p>
@@ -67,7 +72,7 @@
 			</div>
 			<div class="box">
 				<div class="img image-lap">
-					<img src="./assets/images/image-top-laptops.jpg" alt="">
+					<img src="./assets/images/image-top-laptops.jpg" alt="" />
 				</div>
 				<div class="text">
 					<p class="number">02</p>
@@ -77,7 +82,7 @@
 			</div>
 			<div class="box">
 				<div class="img image-game">
-					<img src="./assets/images/image-gaming-growth.jpg" alt="gaming pad">
+					<img src="./assets/images/image-gaming-growth.jpg" alt="gaming pad" />
 				</div>
 				<div class="text">
 					<p class="number">03</p>
@@ -88,7 +93,5 @@
 				</div>
 			</div>
 		</div>
-
-		<!-- Home New Popular Trending Categories -->
 	</body>
 </html>
