--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Four card feature section</title>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="projekt2.css">
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
+    <div class="akapit1">
+    Reliable,efficent delivery</div>
+    <div class="akapit2"><h2>Powered by Technology</h2></div>
+    <div class="akapit3"><h2>Our Artificial Intelligence powered tools use millions of project data<p>points to ensure that your project is successful</p></h2></div>
+        <section >
+            <div class="supervisor"><div class="color1"></div><div class="tekst1"><h1>Supervisor</h1>Monitors activity, to identify project<p> roadblocks</p><div class="position1"><div class="icon"><img class="icon1" src="icon-supervisor.svg"></div></div></div></div>
+            <div class="srodek"><div class="team"><div class="color2"></div><div class="tekst2"><h1>Team Builder</h1>Scans our talent network to create the <p>optimal team for your project</p><div class="position2"><div class="icon2"><img src="icon-team-builder.svg"></div></div></div></div>
+            <div class="Karma"><div class="color3"></div><div class="tekst3"><h1>Karma</h1>Regularly evaluates our talent to <p>ensure quality</p><div class="position3"><div class="icon3"><img src="icon-karma.svg"></div></div></div></div></div>
+            <div class="Calculator"><div class="color4"></div><div class="tekst4"><h1>Calculator</h1>Uses data from past projects to <p>provide better delivery estimates</p><div class="position4"><div class="icon4"><img  src="icon-calculator.svg"></div></div></div></div>
+        </section>
 </body>
 </html>
