--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -1,33 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Four card feature section</title>
 
 </head>
+
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+  <div class="container">
+    <div class="container__description">
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+      <h1 class="container__description--title">Reliable, efficient delivery</h1>
+      <h1>Powered by Technology</h1>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+      <p>
+        Our Artificial Intelligence powered tools use millions of project data points
+        to ensure that your project is successful
+      </p>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+    </div>
+    <div class="container__body">
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+      <div class="container__body--first-section">
+        <div class="container__body--card supervisor">
+          <h3>Supervisor</h3>
+          <p>
+            Monitors activity to identify project roadblocks
+          </p>
+          <div>
+            <img src="./images/icon-supervisor.svg" alt="">
+          </div>
+        </div>
+      </div>
 
+      <div class="container__body--second-section">
+
+        <div class="container__body--card team-builder">
+          <h3>Team Builder</h3>
+          <p>
+            Scans our talent network to create the optimal team for your project
+          </p>
+          <div>
+            <img src="./images/icon-team-builder.svg" alt="">
+          </div>
+        </div>
+
+        <div class="container__body--card karma">
+          <h3>Karma</h3>
+          <p>
+            Regularly evaluates our talent to ensure quality
+          </p>
+          <div>
+            <img src="./images/icon-karma.svg" alt="">
+          </div>
+        </div>
+
+      </div>
+
+      <div class="container__body--third-section">
+        <div class="container__body--card calculator">
+          <h3>Calculator</h3>
+          <p>
+            Uses data from past projects to provide better delivery estimates
+          </p>
+          <div>
+            <img src="./images/icon-calculator.svg" alt="">
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
 </body>
+
 </html>
