--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -26,12 +26,22 @@
           class="logo"
           src="C:\Users\kdolo\Desktop\zadanie 1\jfddr8-project-html-css\Project 3\assets\images\logo.svg"
         />
-        <div class="menu"><p>Home New Popular Trending Categories</p></div>
+        <div class="menu">
+          <p class="nav">Home New Popular Trending Categories</p>
+          <img
+            class="hamburger"
+            src="C:\Users\kdolo\Desktop\zadanie 1\jfddr8-project-html-css\Project 3\assets\images\icon-menu.svg"
+          />
+        </div>
       </div>
       <div class="main">
         <img
           class="picture"
           src="C:\Users\kdolo\Desktop\zadanie 1\jfddr8-project-html-css\Project 3\assets\images\image-web-3-desktop.jpg"
+        />
+        <img
+          class="picturemob"
+          src="C:\Users\kdolo\Desktop\zadanie 1\jfddr8-project-html-css\Project 3\assets\images\image-web-3-mobile.jpg"
         />
         <div class="tekst">
           <p class="title">The Bright Future of Web 3.0?</p>
@@ -52,11 +62,17 @@
         <h3>Hydrogen VS Electric Cars</h3>
         <p class="listtekst">Will hydrogen-fueled cars ever catch up to EVs?</p>
         <div class="line"></div>
-        <h3>Hydrogen VS Electric Cars</h3>
-        <p class="listtekst">Will hydrogen-fueled cars ever catch up to EVs?</p>
+        <h3>The Downsides of AI Artistry</h3>
+        <p class="listtekst">
+          What are the possible adverse effects of on-demand AI image
+          generation?
+        </p>
         <div class="line"></div>
-        <h3>Hydrogen VS Electric Cars</h3>
-        <p class="listtekst">Will hydrogen-fueled cars ever catch up to EVs?</p>
+        <h3>Is VC Funding Drying Up?</h3>
+        <p class="listtekst">
+          Private funding by VC firms is down 50% YOY. We take a look at what
+          that means.
+        </p>
       </div>
       <div class="bottom">
         <img
