--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -24,44 +24,53 @@
         </svg>
         <nav>
           <i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i>
-          <!-- Home 
-          New
-          Popular
-          Trending 
-          Categories -->
+          <div class="menu">
+            <span>Home</span>
+            <span>New</span>
+            <span>Popular </span>
+            <span>Trending </span>
+            <span>Categories</span>
+          </div>
         </nav>
       </header>
+      <div class="sections">
+        <section class="frn">
+          <img class="mobile" src="assets/images/image-web-3-mobile.jpg" />
+          <img class="desktop" src="assets/images/image-web-3-desktop.jpg" />
+          <div class="par">
+            <div>
+              <h1>The Bright Future of Web 3.0?</h1>
+            </div>
+            <div>
+              <div>
+                We dive into the next evolution of the web that claims to put
+                the power of the platforms back into the hands of the people.
+                But is it really fulfilling its promise?
+              </div>
 
-      <section class="frn">
-        <img src="assets/images/image-web-3-mobile.jpg" />
-        <h1>The Bright Future of Web 3.0?</h1>
-
-        <div>
-          We dive into the next evolution of the web that claims to put the
-          power of the platforms back into the hands of the people. But is it
-          really fulfilling its promise?
-        </div>
-
-        <div><button>READ MORE</button></div>
-      </section>
-      <section class="dark">
-        <h2>New</h2>
-        <h3>Hydrogen VS Electric Cars</h3>
-        <p>hydrogen-fueled cars ever catch up to EVs?</p>
-        <hr>
-        <h3>The Downsides of AI Artistry</h3>
-        <p>
-          What are the possible adverse effects of on-demand AI image
-          generation?
-        </p>
-        <hr>
-        <h3>Is VC Funding Drying Up?</h3>
-        <p>
-          Private funding by VC firms is down 50% YOY. We take a look at what
-          that means.
-        </p>
-      </section>
-      <div>
+              <button>READ MORE</button>
+            </div>
+          </div>
+        </section>
+        <section class="dark">
+          <h2>New</h2>
+          <h3>Hydrogen VS Electric Cars</h3>
+          <p>hydrogen-fueled cars ever catch up to EVs?</p>
+          <hr />
+          <h3>The Downsides of AI Artistry</h3>
+          <p>
+            What are the possible adverse effects of on-demand AI image
+            generation?
+          </p>
+          <hr />
+          <h3>Is VC Funding Drying Up?</h3>
+          <p>
+            Private funding by VC firms is down 50% YOY. We take a look at what
+            that means.
+          </p>
+        </section>
+      </div>
+      <div class="articles">
         <div class="article">
           <div class="pct one"></div>
           <div class="info">
@@ -73,17 +82,18 @@
         <div class="article">
           <div class="pct two"></div>
           <div class="info">
-            <h2>02</h2> <h3>Top 10 Laptops of 2022</h3>
+            <h2>02</h2>
+            <h3>Top 10 Laptops of 2022</h3>
             <p>Our best picks for various needs and budgets.</p>
           </div>
         </div>
         <div class="article">
           <div class="pct three"></div>
           <div class="info">
-            <h2>03<h2>
-            <h3>The Growth of Gaming</h2>
+            <h2>03</h2>
+            <h3>The Growth of Gaming</h3>
             <p>How the pandemic has sparked fresh opportunities.</p>
-            </div>
+          </div>
         </div>
       </div>
       <script
